@@ -1,0 +1,1 @@
+wrap | /dev/null | -P | wrap-P-04.txt | 0
